Updated project to follow Google Check Style.